@@ -1,4 +1,4 @@
-.\" RCSid "$Id: pvalue.1,v 1.9 2019/07/15 22:39:50 greg Exp $"
+.\" RCSid "$Id: pvalue.1,v 1.10 2019/07/15 23:42:44 greg Exp $"
 .TH PVALUE 1 1/15/99 RADIANCE
 .SH NAME
 pvalue - convert RADIANCE picture to/from alternate formats
@@ -80,7 +80,6 @@ causes the resolution string to be printed, which is the default.
 Skip the specified number of bytes on the input header.
 This option is useful for skipping unintelligible headers in
 foreign file formats.
-(Does not work when reading from standard input.)
 .TP
 .BI \-e \ exposure
 Adjust the exposure by the amount specified.
